--- a/src/assets/scss/modules/wrapper.scss
+++ b/src/assets/scss/modules/wrapper.scss
@@ -1,9 +1,9 @@
-// .wrapper_example {
-//   display: flex;
-//   h1 {
-//     font-size: rem(20)
-//   }
-// }
+ .wrapper_example {
+   display: flex;
+   h1 {
+     font-size: rem(20)
+   }
+ }
 
 // #main {
 //   background-image: url('/assets/img/dogsad.jpg');
