--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -8,6 +8,7 @@ html(lang='en')
     title #{title}
     meta(name="description", content=description)
     link(rel="stylesheet", href="main.css")
+    link(href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet")
     block head
 
   body(class=pageClass)
