--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -12,7 +12,7 @@ html(lang='en')
     block head
 
   body(class=pageClass)
-    .wrapper
-        include ../includes/modules/header/header
-        .content-wrapper
-          block content
+    block header
+    block content
+    block footer
+    block scripts
