--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -2,12 +2,16 @@
 @import "utils/vars";
 @import "utils/mixins";
 @import "utils/fonts";
+// Modules
+@import "utils/blocks";
+
+// Icons
+$material-icons-font-path: '~material-icons/iconfont/';
+@import '~material-icons/iconfont/material-icons.scss';
 
 html {
-  line-height: $mainLineHeight;
-	font-size: $mainFontSize;
-	color: $mainFontColor;
-  height: 100%;
+  box-sizing: border-box;
+  font-size: 14px;
   @media screen and (max-width: $desktopWidth) {
 		font-size: 16px;
   }
@@ -24,67 +28,28 @@ body {
   padding: 0;
   font-family: $mainFont;
 	font-size: $mainFontSize;
-  font-weight: $mainFontWeight;
+  font-weight: normal;
+	font-style: normal;
+	max-width: $desktopWidth;
+	min-width: $smPhoneWidth;
+	width: 100%;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-*, *:before, *:after { box-sizing: border-box; }
+*, *:before, *:after { box-sizing: inherit; }
 
 h1, h2, h3, h4, h5, h6 { margin: 0; }
 
-a { text-decoration: none; }
+a { 
+  display: block;
+	text-decoration: none;
+	color: $dark-50;
+}
+
 
 ul, li {
   margin: 0;
   padding: 0;
   list-style-type: none;
 }
-
-section, .section {
-  position: relative;
-  padding: 40px 0;
-  @media screen and (max-width: $desktopWidth) {
-    padding: 36px 0;
-  }
-  @media screen and (max-width: $desktopWidth) {
-    padding: 28px 0;
-  }
-  @media screen and (max-width: $desktopWidth) {
-    padding: 20px 0;
-  }
-}
-
-.wrapper {
-  display: flex;
-  flex-direction: column;
-  margin: 0 auto;
-  min-height: 100vh;
-}
-
-.content-wrapper {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-}
-
-.container {
-  width: 100%;
-  flex: 0 0 auto;
-  position: relative;
-  margin: 0 auto;
-  max-width: $desktopWidth;
-  @media screen and (max-width: $smDesktopWidth) {
-    max-width: tableWidth;
-  }
-  @media screen and (max-width: $tableWidth) {
-    max-width: phoneWidth;
-  }
-  @media screen and (max-width: $phoneWidth) {
-    max-width: smPhoneWidth;
-  }
-}
-
-// Modules
-@import "modules/wrapper.scss";
-@import "modules/header.scss";
