--- a/src/assets/scss/modules/header/header.scss
+++ b/src/assets/scss/modules/header/header.scss
@@ -35,10 +35,14 @@
     justify-content: center;
 
     &__logged {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-    }
+      display: inline-block;
+      border-left: 1px solid $dark-10;
+      color: $dark-50;
+      padding-left: 30px;
+      height: 30px;
+      line-height: 30px;
+      margin-bottom: 30px;
+  }
 
     .button {
       width: 101px;
