--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -19,6 +19,7 @@ $dark-100: rgba(31,32,65, 1);
 $dark-75:rgba(31,32,65, 0.75);
 $dark-50: rgba(31,32,65, 0.50);
 $dark-25: rgba(31,32,65, 0.25);
+$dark-10: rgba(31,32,65, 0.1);
 $dark-5: rgba(31,32,65, 0.05);
 $purple: #BC9CFF;
 $green: #6FCF97;
