Started to write Colors&Type

--- a/src/assets/scss/utils/fonts.scss
+++ b/src/assets/scss/utils/fonts.scss
@@ -14,3 +14,11 @@
 	font-weight: bold;
 	font-style: normal;
 }
+
+@font-face {
+	font-family: 'Quicksand';
+	src: url('../fonts/Quicksand/Quicksand-Bold.eot');
+	src: local('☺'), url('../fonts/Quicksand/Quicksand-Bold.woff') format('woff'), url('../fonts/Quicksand/Quicksand-Bold.ttf') format('truetype'), url('../fonts/Quicksand/Quicksand-Bold.svg') format('svg');
+	font-weight: bold;
+	font-style: normal;
+}
