--- a/src/assets/scss/utils/blocks.scss
+++ b/src/assets/scss/utils/blocks.scss
@@ -7,3 +7,7 @@
 @import "../modules/header/header.scss";
 //@import "../modules/footer/footer.scss";
 //@import "../modules/footer/footer-creative.scss";
+
+// Colors & Type
+
+@import "../modules/colors-type/colors-type.scss";
