--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -1,6 +1,6 @@
 // Font
 $mainFont                : 'Montserrat', sans-serif;
-
+$secondFont              : 'Quicksand', sans-serif;
 // Size
 $mainFontColor           : #101010;
 $mainFontSize            : 14px;
