--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -13,6 +13,6 @@ html(lang='en')
 
   body(class=pageClass)
     block header
-    block content
+    block colors-type
     block footer
     block scripts
