--- a/src/assets/scss/utils/vars.scss
+++ b/src/assets/scss/utils/vars.scss
@@ -29,3 +29,14 @@ $green: #6FCF97;
 $primary-gradient: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
 $secondary-gradient: linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%);
 
+h1 {
+  font-size: 24px;
+}
+
+h2 {
+  font-size: 19px;
+}
+
+h3 {
+  font-size: 12px;
+}
