--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -14,4 +14,6 @@ block header
     logged: true
   })
 block colors-type
-  +colors-type({})
+  +colors-type([
+    {'name' : 'Dark Shade 100%','hex' : '#1F2041', 'opacity' : '1'}, 
+    {'name' : 'Dark Shade 75%','hex' : '#1F2041', 'opacity' : '0.75'}])
