--- a/src/assets/scss/modules/colors-type/colors-type.scss
+++ b/src/assets/scss/modules/colors-type/colors-type.scss
@@ -1,54 +1,68 @@
-.colors-type {
+.logo {
+  margin-top: 15px;
+  margin-left: 15px;
+}
 
+.colors__list {
+  display: flex;
+  flex-direction: column;
+  height: 610px;
+  margin-left: 150px;
+  margin-top: 82px;
+  margin-bottom: 145px;
+  justify-content: space-between;
 
-  &__logo {
-    margin-top: 15px;
-    margin-left: 15px;
-  }
-
-  &__colors {
+  &-item {
     display: flex;
-    flex-direction: column;
-    height: 610px;
-    width: 270px;
-    margin-left: 150px;
-    margin-top: 145px;
-    margin-bottom: 145px;
-    justify-content: space-between;
+    flex-direction: row;
+  }
+}
+.colors__item-box {
+  display: block;
+  height: 70px;
+  width: 70px;
+  border-radius: 6px;
+}
+.colors__item-text {
+  display: flex;
+  margin-left: 30px;
+  justify-content: center;
+  flex-direction: column;
+  line-height: 29px;
+  color: $dark-100;
 
-    &-item {
-      display: flex;
-      flex-direction: row;
-
-      &__box {
-        display: block;
-        height: 70px;
-        width: 70px;
-        border-radius: 6px;
-      }
-      &__text {
-        display: flex;
-        margin-left: 30px;
-        justify-content: center;
-        font-family: $secondFont;
-        color: $dark-100;
-
-        h2 {
-          display: flex;
-          align-content: flex-start;
-          justify-content: center;
-        }
-        p {
-          display: flex;
-          align-content: flex-start;
-          justify-content: center;
-        }
-      }
-    }
+  &__title{
+    font-family: $secondFont;
+  }
+  &__desc {
+    display: flex;
+    margin: 0px;
+    font-weight: 400;
+    font-family: $mainFont;
   }
 }
 
-span {
-  font-family: $mainFont;
-  font-weight: normal;
+.list-type {
+  margin-left: 427px;
+  margin-top: 145px;
+
+  &__item-tag {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: $mainFont;
+    font-weight: normal;
+    color: $dark-25;
+    margin-right: 30px;
+  }
+  &__item-text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: $secondFont;
+  }
+  &__body {
+    font-family: $mainFont;
+    color: $dark-75;
+  }
 }
