--- a/src/assets/scss/modules/header/header.scss
+++ b/src/assets/scss/modules/header/header.scss
@@ -21,23 +21,18 @@
       margin-bottom: 26px;
       margin-right: 30px;
       color: $dark-50;
-      
-      &:nth-child(3) {
-        margin-right: 0px;
-      }
-      &:nth-child(4){
-        margin-left: 0px;
-        margin-top: 25px;
-        margin-bottom: 24px;
-        margin-right: 20px;
-      }
-      
-
-      &-bold {
-        font-weight: bold;
-        color: $dark-75;
-      }
     } 
+  }
+  .active {
+    font-weight: bold;
+    color: $dark-75;
+  }
+
+  i {
+    margin-left: 0px;
+    margin-top: 25px;
+    margin-bottom: 24px;
+    margin-right: 20px;
   }
   &__login-register {
     display: flex;
