Changing webpack setup overall to be more BEM-like

--- a/src/assets/scss/utils/blocks.scss
+++ b/src/assets/scss/utils/blocks.scss
@@ -1,6 +1,7 @@
 // Form-elements
 
 @import "../modules/form-elements/buttons/buttons.scss";
+@import "../modules/form-elements/text-field/text-field.scss";
 
 // Header && Footer
 
